2008-11-19  Ethan Merritt  <merritt@u.washington.edu>

	* term/gd.trm (PNG_options): If no information is available about what
	default scalable font might be available we currently give up and fall
	back to a built in non-scalable font.  Now we try font "arial" before
	falling back.  Who knows, it might even be available.

2008-11-13  Ethan Merritt  <merritt@u.washington.edu>

	* docs/gnuplot.doc docs/gnuplot.texi: Update section on color selection
	to include "lc variable".

2008-11-06  Ethan Merritt  <merritt@u.washington.edu>

	* term/x11.trm (X11_set_font ENHX11_put_text): Initialize enhanced text
	processing to use the most recently requested font rather than the
	default font.

	* src/set.c (set_tics) src/show.c (show_tics) src/save.c (save_set_all)
	docs/gnuplot.doc:  Allow tics to be set front/back without turning on
	the whole grid.    Syntax:   set tics {front|back}

2008-10-30  Ethan Merritt  <merritt@u.washington.edu>

	* src/axis.c (gen_tics) src/axis.h: Use a more complete test for
	round-off error when the increment between axis tics is close to the
	precision of the floating point representation.
	Bug #2209654

2008-10-27  Ethan Merritt  <merritt@u.washington.edu>

	* src/misc.c (lp_parse) src/graphics.c (check_for_variable_color):
	New colorspec:   'lc variable'
	Read linestyle index from data column, look up corresponding color.
	(2D plots only; Version 4.2 handling of variable color in 3D is messy).

2008-10-12  Ethan Merritt  <merritt@u.washington.edu>

	* src/plot2d.c (eval_plots): Explicitly set default color of first
	histogram to linestyle/linetype 0.
	Bug #2155287

2008-10-10  Petr Mikulik  <mikulik@physics.muni.cz>

	* src/win/pgnuplot.c: Document option "-e".

2008-10-10  Shigeharu Takeno  <shige@iee.niit.ac.jp>

	* src/win/wgraph.c (drawgraph):  Work around a Windows clipboard bug by
	using ExtCreatePen() only for linewidth != 1.  The clipboard loses the
	line color if created with ExtCreatePen(), but not CreatePenIndirect().